<resources>
    <string name="app_name">axelbremerpset6</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="no_account_yet_register_here">No account yet? Register here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="must_be_more_than_6_characters">Must be more than 6 characters...</string>
    <string name="search_terms_here">search terms here</string>
    <string name="search">Search</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="thumbnail">thumbnail</string>
    <string name="find_favorites_by_user_e_mail">Find favorites by user e-mail.</string>
    <string name="favorites">Favorites</string>
    <string name="sign_out">Sign Out</string>
</resources>
